--- a/.github/workflows/alpine.yml
+++ b/.github/workflows/alpine.yml
@@ -32,7 +32,7 @@ jobs:
           cd $RUNNER_WORKSPACE
           git clone --recurse-submodules $GITHUB_SERVER_URL/$GITHUB_REPOSITORY.git
           cd $GITHUB_WORKSPACE
-          cpanm -iqn ExtUtils::MakeMaker File::Spec
+          cpanm -iqn ExtUtils::MakeMaker File::Spec LWP::UserAgent
           cpanm -iqn --installdeps .
       - name: Make module
         run: |
