--- a/.github/workflows/alpine.yml
+++ b/.github/workflows/alpine.yml
@@ -24,7 +24,8 @@ jobs:
           apk update
           apk upgrade
           apk add perl perl-app-cpanminus make gzip git
-          apk add perl-test-most perl-test-nowarnings
+          apk add perl-test-most perl-test-nowarnings perl-lwp-protocol-https
+          apk add perl-extutils-makemaker perl-json-maybexs
           perl -V
           # cpanm -iqn ExtUtils::MakeMaker File::Spec Test::Most
           # cpanm -iqn Sub::Identify Log::Any
@@ -32,7 +33,7 @@ jobs:
           cd $RUNNER_WORKSPACE
           git clone --recurse-submodules $GITHUB_SERVER_URL/$GITHUB_REPOSITORY.git
           cd $GITHUB_WORKSPACE
-          cpanm -iqn ExtUtils::MakeMaker File::Spec LWP::UserAgent
+          cpanm -iqn File::Spec
           cpanm -iqn --installdeps .
       - name: Make module
         run: |
