--- a/.github/workflows/alpine.yml
+++ b/.github/workflows/alpine.yml
@@ -25,7 +25,7 @@ jobs:
           apk upgrade
           apk add perl perl-app-cpanminus make gzip git
           apk add perl-test-most perl-test-nowarnings perl-lwp-protocol-https
-          apk add perl-extutils-makemaker perl-json-maybexs
+          apk add perl-json-maybexs
           perl -V
           # cpanm -iqn ExtUtils::MakeMaker File::Spec Test::Most
           # cpanm -iqn Sub::Identify Log::Any
@@ -33,7 +33,7 @@ jobs:
           cd $RUNNER_WORKSPACE
           git clone --recurse-submodules $GITHUB_SERVER_URL/$GITHUB_REPOSITORY.git
           cd $GITHUB_WORKSPACE
-          cpanm -iqn File::Spec
+          cpanm -iqn File::Spec ExtUtils::MakeMaker
           cpanm -iqn --installdeps .
       - name: Make module
         run: |
