--- a/.github/workflows/alpine.yml
+++ b/.github/workflows/alpine.yml
@@ -25,7 +25,7 @@ jobs:
           apk upgrade
           apk add perl perl-app-cpanminus make gzip git
           apk add perl-test-most perl-test-nowarnings perl-lwp-protocol-https
-          apk add perl-json-maybexs
+          apk add perl-json-maybexs perl-params-util
           perl -V
           # cpanm -iqn ExtUtils::MakeMaker File::Spec Test::Most
           # cpanm -iqn Sub::Identify Log::Any
