--- a/.github/workflows/bsd.yml
+++ b/.github/workflows/bsd.yml
@@ -20,7 +20,7 @@ jobs:
             version: '13.0'
             pkginstall: |
               pkg install -y p5-ExtUtils-MakeMaker p5-JSON-MaybeXS
-              pkg install p5-Params-Util p5-LWP-Protocol-https
+              pkg install -y p5-Params-Util p5-LWP-Protocol-https
           - name: openbsd
             version: '7.1'
             pkginstall: |
