--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,8 +20,8 @@ jobs:
           - macos-11
           - ubuntu-latest
           - ubuntu-20.04
-          - windows-latest
-          - windows-2019
+          # - windows-latest
+          # - windows-2019
         perl: ['5.36', '5.34', '5.32', '5.30', '5.28', '5.22']
     name: Perl ${{ matrix.perl }} on ${{ matrix.os }}
     steps:
