--- a/.github/workflows/bsd.yml
+++ b/.github/workflows/bsd.yml
@@ -19,7 +19,9 @@ jobs:
           - name: freebsd
             version: '13.0'
             pkginstall: |
-              pkg install -y p5-ExtUtils-MakeMaker p5-JSON-MaybeXS p5-Params-Util p5-LWP-Protocol-https
+              pkg install -y p5-ExtUtils-MakeMaker p5-JSON-MaybeXS
+              pkg install -y p5-Params-Util p5-LWP-Protocol-https
+              pkg install -y p5-Devel-StackTrace
           - name: openbsd
             version: '7.1'
             pkginstall: |
