--- a/.github/workflows/cygwin.yml
+++ b/.github/workflows/cygwin.yml
@@ -23,7 +23,7 @@ jobs:
         uses: egor-tensin/setup-cygwin@master
         with:
           # platform: x64
-          packages: perl_base perl-ExtUtils-MakeMaker make gcc-g++ libcrypt-devel libnsl-devel bash perl-IO-Socket-SSL perl-LWP-Protocol-https
+          packages: perl_base perl-ExtUtils-MakeMaker make gcc-g++ libcrypt-devel libnsl-devel bash perl-IO-Socket-SSL perl-LWP-Protocol-https perl-DateTime
       - uses: actions/checkout@main
         with:
           submodules: recursive
