--- a/.github/workflows/bsd.yml
+++ b/.github/workflows/bsd.yml
@@ -11,19 +11,19 @@ on:
   pull_request:
 jobs:
   build:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
         os:
           - name: freebsd
-            version: '13.0'
+            version: '13.3'
             pkginstall: |
               sudo pkg install -y p5-ExtUtils-MakeMaker p5-JSON-MaybeXS p5-IPC-System-Simple p5-Test-Needs
               sudo pkg install -y p5-Params-Util p5-LWP-Protocol-https p5-Test-NoWarnings
               sudo pkg install -y p5-Devel-StackTrace
           - name: openbsd
-            version: '7.1'
+            version: '7.5'
             pkginstall: |
               pkg_add p5-JSON-MaybeXS p5-LWP-Protocol-https p5-Params-Util
 
@@ -42,6 +42,6 @@ jobs:
             sudo ${{ matrix.os.pkginstall }}
             curl -L https://cpanmin.us | sudo perl - --notest --installdeps --with-configure --with-develop .
             sudo chown -R runner:runner .
-            perl Makefile.PL
-            make
-            prove -wlmb t
+            AUTOMATED_TESTING=1 perl Makefile.PL
+            AUTOMATED_TESTING=1 make
+            AUTOMATED_TESTING=1 prove -wlmb t
