--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,6 @@
 ---
 # See https://github.com/actions/virtual-environments
+# https://github.com/marketplace/actions/setup-perl-environment
 
 name: Test Code
 on:
@@ -9,6 +10,8 @@ on:
     tags-ignore:
       - '*'
   pull_request:
+  schedule:
+    - cron: '12 22 22 * *'
 jobs:
   build:
     runs-on: ${{ matrix.os }}
@@ -17,12 +20,9 @@ jobs:
       matrix:
         os:
           - macos-latest
-          - macos-11
           - ubuntu-latest
-          - ubuntu-20.04
-          # - windows-latest
-          # - windows-2019
-        perl: ['5.36', '5.34', '5.32', '5.30', '5.28', '5.22']
+          - windows-latest
+        perl: ['5.40', '5.38', '5.36', '5.34', '5.32', '5.30', '5.28', '5.22']
     name: Perl ${{ matrix.perl }} on ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v1
@@ -32,13 +32,17 @@ jobs:
           perl-version: ${{ matrix.perl }}
       - run: perl -V
       - name: Install Dependencies
+        env:
+          AUTOMATED_TESTING: 1
         run: |
           cpanm -iqn --skip-satisfied File::Spec ExtUtils::MakeMaker
           cpanm -iqn --skip-satisfied Test::Portability::Files Test::Pod::Coverage JSON::MaybeXS
           cpanm -iqn --skip-satisfied Test::Compile Test::Requires
           cpanm -iqn --skip-satisfied --installdeps --notest .
       - name: Run Tests
-        run: prove -l -b t
         env:
           AUTHOR_TESTING: 1
           AUTOMATED_TESTING: 1
+          NO_NETWORK_TESTING: 1
+          NONINTERACTIVE_TESTING: 1
+        run: prove -l -b t
