--- a/.github/workflows/alpine.yml
+++ b/.github/workflows/alpine.yml
@@ -24,7 +24,7 @@ jobs:
           apk update
           apk upgrade
           apk add perl perl-app-cpanminus make gzip git
-          apk add perl-test-most perl-test-nowarnings perl-lwp-protocol-https
+          apk add perl-test-most perl-test-nowarnings perl-lwp-protocol-https perl-chi
           apk add perl-json-maybexs perl-params-util perl-datetime perl-test-mockmodule
           perl -V
           # cpanm -iqn ExtUtils::MakeMaker File::Spec Test::Most
