--- a/.github/workflows/strawberry.yml
+++ b/.github/workflows/strawberry.yml
@@ -2,6 +2,8 @@
 # See https://github.com/actions/virtual-environments
 
 name: Test Code on Windows using Strawberry Perl
+permissions:
+  contents: read
 on:
   push:
     branches:
