--- a/.github/workflows/alpine.yml
+++ b/.github/workflows/alpine.yml
@@ -35,7 +35,7 @@ jobs:
           cd $RUNNER_WORKSPACE
           git clone --recurse-submodules $GITHUB_SERVER_URL/$GITHUB_REPOSITORY.git
           cd $GITHUB_WORKSPACE
-          cpanm -iqn File::Spec ExtUtils::MakeMaker Geo::Location::Point Object::Configure
+          cpanm -iqn File::Spec ExtUtils::MakeMaker Data::Alias JSON::Parse YAML::XS Geo::Location::Point Log::Abstraction Object::Configure
           cpanm -iqn --installdeps .
       - name: Make module
         run: |
