--- a/.github/workflows/alpine.yml
+++ b/.github/workflows/alpine.yml
@@ -27,7 +27,7 @@ jobs:
           apk upgrade
           apk add perl perl-app-cpanminus make gzip git
           apk add perl-test-most perl-test-nowarnings perl-lwp-protocol-https perl-chi
-          apk add perl-json-maybexs perl-params-util perl-datetime perl-test-mockmodule
+          apk add perl-json-maybexs perl-params-util perl-datetime perl-test-mockmodule libyaml-dev
           perl -V
           # cpanm -iqn ExtUtils::MakeMaker File::Spec Test::Most
           # cpanm -iqn Sub::Identify Log::Any
@@ -35,7 +35,8 @@ jobs:
           cd $RUNNER_WORKSPACE
           git clone --recurse-submodules $GITHUB_SERVER_URL/$GITHUB_REPOSITORY.git
           cd $GITHUB_WORKSPACE
-          cpanm -iqn File::Spec ExtUtils::MakeMaker Data::Alias JSON::Parse YAML::XS Geo::Location::Point Log::Abstraction Object::Configure
+	  cpanm -iqn Object::Configure JSON::Parse YAML::XS Data::Alias Scalar::Readonly
+          cpanm -iqn File::Spec ExtUtils::MakeMaker Geo::Location::Point Log::Abstraction
           cpanm -iqn --installdeps .
       - name: Make module
         run: |
