--- a/.github/workflows/alpine.yml
+++ b/.github/workflows/alpine.yml
@@ -27,7 +27,7 @@ jobs:
           apk upgrade
           apk add perl perl-app-cpanminus make gzip git
           apk add perl-test-most perl-test-nowarnings perl-lwp-protocol-https perl-chi
-          apk add perl-json-maybexs perl-params-util perl-datetime perl-test-mockmodule libyaml-dev
+          apk add perl-json-maybexs perl-params-util perl-datetime perl-test-mockmodule yaml-dev
           perl -V
           # cpanm -iqn ExtUtils::MakeMaker File::Spec Test::Most
           # cpanm -iqn Sub::Identify Log::Any
