--- a/.github/workflows/alpine.yml
+++ b/.github/workflows/alpine.yml
@@ -25,6 +25,7 @@ jobs:
         run: |
           apk update
           apk upgrade
+          apk add --no-cache perl-dev build-base
           apk add perl perl-app-cpanminus make gzip git
           apk add perl-test-most perl-test-nowarnings perl-lwp-protocol-https perl-chi
           apk add perl-json-maybexs perl-params-util perl-datetime perl-test-mockmodule yaml-dev
@@ -35,7 +36,7 @@ jobs:
           cd $RUNNER_WORKSPACE
           git clone --recurse-submodules $GITHUB_SERVER_URL/$GITHUB_REPOSITORY.git
           cd $GITHUB_WORKSPACE
-          cpanm -iqn Object::Configure JSON::Parse YAML::XS Data::Alias Scalar::Readonly
+          cpanm --iqn YAML::XS Data::Alias Data::Reuse JSON::Parse Scalar::Readonly Readonly::Enum Readonly::Values::Syslog Config::Abstraction Log::Abstraction Object::Configure
           cpanm -iqn File::Spec ExtUtils::MakeMaker Geo::Location::Point Log::Abstraction
           cpanm -iqn --installdeps .
       - name: Make module
