--- a/.github/workflows/alpine.yml
+++ b/.github/workflows/alpine.yml
@@ -27,7 +27,7 @@ jobs:
           apk upgrade
           apk add --no-cache perl-dev build-base
           apk add perl perl-app-cpanminus make gzip git
-          apk add perl-test-most perl-test-nowarnings perl-lwp-protocol-https perl-chi
+          apk add perl-test-most perl-test-nowarnings perl-lwp-protocol-https perl-chi perl-json-xs perl-json-maybexs
           apk add perl-json-maybexs perl-params-util perl-datetime perl-test-mockmodule yaml-dev libffi-dev openssl-dev
           perl -V
           # cpanm -iqn ExtUtils::MakeMaker File::Spec Test::Most
