--- a/.github/workflows/dashboard.yml
+++ b/.github/workflows/dashboard.yml
@@ -1,6 +1,6 @@
 ---
 # Create https://nigelhorne.github.io/Weather-Meteo/coverage/
-name: CI
+name: Test Dashboard
 
 permissions:
   contents: write  # needed to push to gh-pages
@@ -11,6 +11,10 @@ on:
   pull_request:
     branches: [main, master]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -19,7 +23,7 @@ jobs:
         perl: ["5.40"]
     steps:
       # Checkout repository
-      - uses: actions/checkout@v5
+      - uses: actions/checkout@v6
         with:
           fetch-depth: 0
 
@@ -37,11 +41,16 @@ jobs:
           sudo apt-get -y upgrade
         if: runner.os == 'Linux'
 
+      - name: Upgrade Toolchain
+        run: cpanm -iqn ExtUtils::MakeMaker Module::Build
+
       # Install module dependencies (from cpanfile or manually)
       - name: Install dependencies
         run: |
           cpanm --notest --installdeps .
-          cpanm -iqn ExtUtils::MakeMaker Test::Most Devel::Cover Devel::Cover::Report::Html
+          cpanm -iqn ExtUtils::MakeMaker Test::Most Devel::Cover Devel::Cover::Report::Html POSIX File::Glob File::Slurp File::stat Readonly
+          cpanm -iqn IPC::System::Simple WWW::RT::CPAN IPC::Run3
+        timeout-minutes: 10
 
       # Optional: run Perl::Critic static checks
       # - name: Run Perl::Critic
@@ -50,14 +59,25 @@ jobs:
       #     perlcritic --verbose 5 lib || true
 
       - name: Run tests manually
+        env:
+          AUTOMATED_TESTING: 1
+          NO_NETWORK_TESTING: 1
+          NONINTERACTIVE_TESTING: 1
         run: |
           prove -l -b -v t
 
       # Run the tests with Devel::Cover for coverage
       - name: Run tests with coverage
-        run: |
-          COVER_VERBOSE=1 cover -test
+        env:
+          PERL5LIB: ${{ github.workspace }}/local/lib/perl5
+          COVER_VERBOSE: 1
+          AUTOMATED_TESTING: 1
+          NO_NETWORK_TESTING: 1
+          NONINTERACTIVE_TESTING: 1
         working-directory: ${{ github.workspace }}
+        run: |
+          perl Makefile.PL
+          cover -test
 
       # Generate HTML coverage report
       - name: Generate HTML report
@@ -99,7 +119,6 @@ jobs:
           git config user.email "github-actions@github.com"
           git add coverage_history/
           git commit -m "Add coverage snapshot for $TIMESTAMP ($SHA)" || echo "No changes to commit"
-          git pull --rebase
           git push origin HEAD:${{ github.ref_name }}
 
       # Deploy HTML report to GitHub Pages
